Add env variable for operator ui port

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ TESTNET_USERNAME=username-operatoraddress # Change this (recommended to username
 # Optional: the path where you want to store the data of Diva and potentially the consensus and execution clients managed by its stack
 # default value when this variable is unset is the current directory
 DIVA_DATA_FOLDER=
+
+# Optional: the port to expose the operator ui on the host on
+# default value is port 80
+OPERATOR_UI_PORT=
